fix: suppression compteur carousel version mobile et refacto page a-propos

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -75,4 +75,7 @@
   .arrow-right {
     height: 3rem;
   }
+  .index {
+    display: none;
+  }
 }
