--- a/src/styles/details-logement.css
+++ b/src/styles/details-logement.css
@@ -158,7 +158,7 @@
   }
 }
 
-@media (min-width: 1441px) {
+@media (min-width: 1440px) {
   .dropdowns-container {
     gap: 5rem;
   }
